Endpoints table Personne
